{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 67,
  "lineage": "df27dcf8-adf0-5076-15f3-72856d82fd44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b644b4d078605bd",
            "arn": "arn:aws:ec2:ap-south-2:636602705298:instance/i-0204b9b4b56e8daab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0204b9b4b56e8daab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "1O1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017cfb98837d5b518",
            "private_dns": "ip-10-0-1-9.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "public_ip": "18.60.111.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0ec71d68cf3408e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d3dc39bec7201e7",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba0cbbf977e0ded6"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b644b4d078605bd",
            "arn": "arn:aws:ec2:ap-south-2:636602705298:instance/i-004b62abc64bb8476",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004b62abc64bb8476",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "1O1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd43406bbe2a8018",
            "private_dns": "ip-10-0-2-139.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.139",
            "public_ip": "18.60.50.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0960025500e7a9267",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d232c185a8dd8df",
            "tags": {
              "Name": "My Public Instance 2"
            },
            "tags_all": {
              "Name": "My Public Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba0cbbf977e0ded6"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:internet-gateway/igw-01ffa83cf531cdd39",
            "id": "igw-01ffa83cf531cdd39",
            "owner_id": "636602705298",
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:loadbalancer/app/External-LB/9ff9b136aa5fda0e",
            "arn_suffix": "app/External-LB/9ff9b136aa5fda0e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1681422227.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:loadbalancer/app/External-LB/9ff9b136aa5fda0e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba0cbbf977e0ded6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d3dc39bec7201e7"
              },
              {
                "subnet_id": "subnet-07d232c185a8dd8df"
              }
            ],
            "subnets": [
              "subnet-04d3dc39bec7201e7",
              "subnet-07d232c185a8dd8df"
            ],
            "vpc_id": "vpc-0aae05396e0c032df",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:listener/app/External-LB/9ff9b136aa5fda0e/2bea0bc974f046be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:listener/app/External-LB/9ff9b136aa5fda0e/2bea0bc974f046be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:loadbalancer/app/External-LB/9ff9b136aa5fda0e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0",
            "arn_suffix": "targetgroup/ALB-TG/744a49865659bbf0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0-20221229105047766000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0",
            "target_id": "i-0204b9b4b56e8daab"
          },
          "dependencies": [
            "aws_instance.demoinstance",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0-20221229110028213900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:636602705298:targetgroup/ALB-TG/744a49865659bbf0",
            "target_id": "i-004b62abc64bb8476"
          },
          "dependencies": [
            "aws_instance.demoinstance1",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:route-table/rtb-081933683720b0aa1",
            "id": "rtb-081933683720b0aa1",
            "owner_id": "636602705298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ffa83cf531cdd39",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572780916628bf84",
            "route_table_id": "rtb-081933683720b0aa1",
            "subnet_id": "subnet-04d3dc39bec7201e7"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085fe706d7c9f6b83",
            "route_table_id": "rtb-081933683720b0aa1",
            "subnet_id": "subnet-07d232c185a8dd8df"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:security-group/sg-0b148446c838c0ce8",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b148446c838c0ce8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba0cbbf977e0ded6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database SG",
            "name_prefix": "",
            "owner_id": "636602705298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database SG"
            },
            "tags_all": {
              "Name": "Database SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demosg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:security-group/sg-0ba0cbbf977e0ded6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba0cbbf977e0ded6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221229102615359000000001",
            "name_prefix": "terraform-",
            "owner_id": "636602705298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-071b7f94bb0b744f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071b7f94bb0b744f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 1"
            },
            "tags_all": {
              "Name": "Application Subnet 1"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-04383e8c0d7dbb6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04383e8c0d7dbb6d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 2"
            },
            "tags_all": {
              "Name": "Application Subnet 2"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-0fec6175608dae16b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec6175608dae16b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-04e7740c702730bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e7740c702730bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-04d3dc39bec7201e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3dc39bec7201e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 1"
            },
            "tags_all": {
              "Name": "Web Subnet 1"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:subnet/subnet-07d232c185a8dd8df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d232c185a8dd8df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636602705298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 2"
            },
            "tags_all": {
              "Name": "Web Subnet 2"
            },
            "vpc_id": "vpc-0aae05396e0c032df"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636602705298:vpc/vpc-0aae05396e0c032df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0379980780c56d537",
            "default_route_table_id": "rtb-0d78dec192f69eed3",
            "default_security_group_id": "sg-010a74219331b8dcb",
            "dhcp_options_id": "dopt-0c5e3fa5194aa31ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aae05396e0c032df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d78dec192f69eed3",
            "owner_id": "636602705298",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}